--- a/website/package.json
+++ b/website/package.json
@@ -14,11 +14,13 @@
 	"devDependencies": {
 		"@smui/button": "^7.0.0-beta.14",
 		"@smui/card": "^7.0.0-beta.14",
+		"@smui/chips": "^7.0.0-beta.14",
 		"@smui/layout-grid": "^7.0.0-beta.14",
 		"@smui/paper": "^7.0.0-beta.14",
 		"@smui/tab": "^7.0.0-beta.14",
 		"@smui/tab-bar": "^7.0.0-beta.14",
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.20.4",
 		"smui-theme": "^7.0.0-beta.14",
 		"svelte": "^4.0.5",
