--- a/website/package.json
+++ b/website/package.json
@@ -15,6 +15,7 @@
 		"@smui/button": "^7.0.0-beta.14",
 		"@smui/card": "^7.0.0-beta.14",
 		"@smui/chips": "^7.0.0-beta.14",
+		"@smui/fab": "^7.0.0-beta.14",
 		"@smui/layout-grid": "^7.0.0-beta.14",
 		"@smui/paper": "^7.0.0-beta.14",
 		"@smui/tab": "^7.0.0-beta.14",
