--- a/website/package.json
+++ b/website/package.json
@@ -17,9 +17,12 @@
 		"@smui/chips": "^7.0.0-beta.14",
 		"@smui/fab": "^7.0.0-beta.14",
 		"@smui/layout-grid": "^7.0.0-beta.14",
+		"@smui/menu": "^7.0.0-beta.14",
+		"@smui/menu-surface": "^7.0.0-beta.14",
 		"@smui/paper": "^7.0.0-beta.14",
 		"@smui/tab": "^7.0.0-beta.14",
 		"@smui/tab-bar": "^7.0.0-beta.14",
+		"@smui/top-app-bar": "^7.0.0-beta.14",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.20.4",
