--- a/website/package.json
+++ b/website/package.json
@@ -12,9 +12,11 @@
 		"smui-theme": "smui-theme compile static/smui.css -i src/theme"
 	},
 	"devDependencies": {
+		"@smui-extra/bottom-app-bar": "^7.0.0-beta.15",
 		"@smui/button": "^7.0.0-beta.14",
 		"@smui/card": "^7.0.0-beta.14",
 		"@smui/chips": "^7.0.0-beta.14",
+		"@smui/dialog": "^7.0.0-beta.15",
 		"@smui/fab": "^7.0.0-beta.14",
 		"@smui/layout-grid": "^7.0.0-beta.14",
 		"@smui/menu": "^7.0.0-beta.14",
@@ -22,6 +24,7 @@
 		"@smui/paper": "^7.0.0-beta.14",
 		"@smui/tab": "^7.0.0-beta.14",
 		"@smui/tab-bar": "^7.0.0-beta.14",
+		"@smui/textfield": "^7.0.0-beta.15",
 		"@smui/top-app-bar": "^7.0.0-beta.14",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-node": "^1.3.1",
@@ -32,5 +35,9 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"openai": "^4.4.0",
+		"svelte-loading-spinners": "^0.3.4"
+	}
 }
