--- a/website/package.json
+++ b/website/package.json
@@ -38,6 +38,8 @@
 	"type": "module",
 	"dependencies": {
 		"openai": "^4.4.0",
+		"sst": "^2.24.26",
+		"svelte-kit-sst": "^2.24.26",
 		"svelte-loading-spinners": "^0.3.4"
 	}
 }
