--- a/website/package.json
+++ b/website/package.json
@@ -37,6 +37,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"nodemailer": "^6.9.5",
 		"openai": "^4.4.0",
 		"sst": "^2.24.26",
 		"svelte-kit-sst": "^2.24.26",
