--- a/website/package.json
+++ b/website/package.json
@@ -40,7 +40,10 @@
 		"nodemailer": "^6.9.5",
 		"openai": "^4.4.0",
 		"sst": "^2.24.26",
+		"svelte-forms": "^2.3.1",
+		"svelte-forms-lib": "^2.0.1",
 		"svelte-kit-sst": "^2.24.26",
-		"svelte-loading-spinners": "^0.3.4"
+		"svelte-loading-spinners": "^0.3.4",
+		"yup": "^1.2.0"
 	}
 }
