--- a/website/package.json
+++ b/website/package.json
@@ -12,6 +12,7 @@
 		"smui-theme": "smui-theme compile static/smui.css -i src/theme"
 	},
 	"devDependencies": {
+		"@smui-extra/accordion": "^7.0.0-beta.15",
 		"@smui-extra/bottom-app-bar": "^7.0.0-beta.15",
 		"@smui/button": "^7.0.0-beta.14",
 		"@smui/card": "^7.0.0-beta.14",
