--- a/website/package.json
+++ b/website/package.json
@@ -1,50 +1,69 @@
 {
-	"name": "website",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
-		"prepare": "npm run smui-theme",
-		"smui-theme": "smui-theme compile static/smui.css -i src/theme"
-	},
-	"devDependencies": {
-		"@smui-extra/accordion": "^7.0.0-beta.15",
-		"@smui-extra/bottom-app-bar": "^7.0.0-beta.15",
-		"@smui/button": "^7.0.0-beta.14",
-		"@smui/card": "^7.0.0-beta.14",
-		"@smui/chips": "^7.0.0-beta.14",
-		"@smui/dialog": "^7.0.0-beta.15",
-		"@smui/fab": "^7.0.0-beta.14",
-		"@smui/layout-grid": "^7.0.0-beta.14",
-		"@smui/menu": "^7.0.0-beta.14",
-		"@smui/menu-surface": "^7.0.0-beta.14",
-		"@smui/paper": "^7.0.0-beta.14",
-		"@smui/tab": "^7.0.0-beta.14",
-		"@smui/tab-bar": "^7.0.0-beta.14",
-		"@smui/textfield": "^7.0.0-beta.15",
-		"@smui/top-app-bar": "^7.0.0-beta.14",
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/adapter-node": "^1.3.1",
-		"@sveltejs/kit": "^1.20.4",
-		"smui-theme": "^7.0.0-beta.14",
-		"svelte": "^4.0.5",
-		"svelte-check": "^3.4.3",
-		"typescript": "^5.0.0",
-		"vite": "^4.4.2"
-	},
-	"type": "module",
-	"dependencies": {
-		"nodemailer": "^6.9.5",
-		"openai": "^4.4.0",
-		"sst": "^2.24.26",
-		"svelte-forms": "^2.3.1",
-		"svelte-forms-lib": "^2.0.1",
-		"svelte-kit-sst": "^2.24.26",
-		"svelte-loading-spinners": "^0.3.4",
-		"yup": "^1.2.0"
-	}
+  "name": "website",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
+    "prepare": "npm run smui-theme",
+    "smui-theme": "smui-theme compile static/smui.css -i src/theme",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
+  },
+  "devDependencies": {
+    "@smui-extra/accordion": "^7.0.0-beta.15",
+    "@smui-extra/bottom-app-bar": "^7.0.0-beta.15",
+    "@smui/button": "^7.0.0-beta.14",
+    "@smui/card": "^7.0.0-beta.14",
+    "@smui/chips": "^7.0.0-beta.14",
+    "@smui/dialog": "^7.0.0-beta.15",
+    "@smui/fab": "^7.0.0-beta.14",
+    "@smui/layout-grid": "^7.0.0-beta.14",
+    "@smui/menu": "^7.0.0-beta.14",
+    "@smui/menu-surface": "^7.0.0-beta.14",
+    "@smui/paper": "^7.0.0-beta.14",
+    "@smui/tab": "^7.0.0-beta.14",
+    "@smui/tab-bar": "^7.0.0-beta.14",
+    "@smui/textfield": "^7.0.0-beta.15",
+    "@smui/top-app-bar": "^7.0.0-beta.14",
+    "@storybook/addon-essentials": "^7.5.1",
+    "@storybook/addon-interactions": "^7.5.1",
+    "@storybook/addon-links": "^7.5.1",
+    "@storybook/blocks": "^7.5.1",
+    "@storybook/svelte": "^7.5.1",
+    "@storybook/sveltekit": "^7.5.1",
+    "@storybook/testing-library": "^0.2.2",
+    "@sveltejs/adapter-auto": "^2.0.0",
+    "@sveltejs/adapter-node": "^1.3.1",
+    "@sveltejs/kit": "^1.20.4",
+    "autoprefixer": "^10.4.16",
+    "flowbite": "^1.8.1",
+    "flowbite-svelte": "^0.44.18",
+    "flowbite-svelte-icons": "^0.4.4",
+    "postcss": "^8.4.31",
+    "postcss-load-config": "^4.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "smui-theme": "^7.0.0-beta.14",
+    "storybook": "^7.5.1",
+    "svelte": "^4.0.5",
+    "svelte-check": "^3.4.3",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.0.0",
+    "vite": "^4.4.2"
+  },
+  "type": "module",
+  "dependencies": {
+    "nodemailer": "^6.9.5",
+    "openai": "^4.4.0",
+    "sst": "^2.24.26",
+    "svelte-forms": "^2.3.1",
+    "svelte-forms-lib": "^2.0.1",
+    "svelte-kit-sst": "^2.24.26",
+    "svelte-loading-spinners": "^0.3.4",
+    "yup": "^1.2.0"
+  }
 }
