--- a/website/package.json
+++ b/website/package.json
@@ -57,6 +57,8 @@
   },
   "type": "module",
   "dependencies": {
+    "@auth/core": "^0.18.0",
+    "@auth/sveltekit": "^0.3.11",
     "nodemailer": "^6.9.5",
     "openai": "^4.4.0",
     "sst": "^2.24.26",
