--- a/middleware/eeg-central/grails-app/conf/application.yml
+++ b/middleware/eeg-central/grails-app/conf/application.yml
@@ -109,7 +109,12 @@ environments:
     development:
         dataSource:
             dbCreate: create-drop
-            url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            #url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            username: eeg_central
+            password: ${DB_PASSWORD_DEV}
+            driverClassName: org.postgresql.Driver
+            dialect: PostgreSQLDialect
+            url: jdbc:postgresql://localhost:15432/eeg_central
     test:
         dataSource:
             dbCreate: update
