fixing table names to avoid reserved keyword "user"

--- a/middleware/eeg-central/grails-app/conf/application.yml
+++ b/middleware/eeg-central/grails-app/conf/application.yml
@@ -114,7 +114,7 @@ environments:
             password: ${DB_PASSWORD_DEV}
             driverClassName: org.postgresql.Driver
             dialect: PostgreSQLDialect
-            url: jdbc:postgresql://localhost:15432/eeg_central
+            url: jdbc:postgresql://192.168.178.38:15432/eeg_central
     test:
         dataSource:
             dbCreate: update
