--- a/website/package.json
+++ b/website/package.json
@@ -16,7 +16,6 @@
   "devDependencies": {
     "@smui-extra/accordion": "^7.0.0-beta.15",
     "@smui-extra/bottom-app-bar": "^7.0.0-beta.15",
-    "@smui/button": "^7.0.0-beta.14",
     "@smui/card": "^7.0.0-beta.14",
     "@smui/chips": "^7.0.0-beta.14",
     "@smui/dialog": "^7.0.0-beta.15",
@@ -34,33 +33,32 @@
     "@storybook/addon-links": "^7.5.1",
     "@storybook/blocks": "^7.5.1",
     "@storybook/svelte": "^7.5.1",
-    "@storybook/sveltekit": "^7.5.1",
+    "@storybook/sveltekit": "^7.5.3",
     "@storybook/testing-library": "^0.2.2",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/adapter-node": "^1.3.1",
-    "@sveltejs/kit": "^1.20.4",
+    "@sveltejs/kit": "^1.27.5",
     "autoprefixer": "^10.4.16",
-    "flowbite": "^1.8.1",
-    "flowbite-svelte": "^0.44.18",
-    "flowbite-svelte-icons": "^0.4.4",
+    "flowbite": "^2.1.1",
+    "flowbite-svelte": "^0.44.19",
+    "flowbite-svelte-icons": "^0.4.5",
     "postcss": "^8.4.31",
     "postcss-load-config": "^4.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "smui-theme": "^7.0.0-beta.14",
     "storybook": "^7.5.1",
-    "svelte": "^4.0.5",
-    "svelte-check": "^3.4.3",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.0.0",
-    "vite": "^4.4.2"
+    "svelte": "^4.2.3",
+    "svelte-check": "^3.6.0",
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.2.2",
+    "vite": "^4.5.0"
   },
   "type": "module",
   "dependencies": {
-    "@auth/core": "^0.18.0",
-    "@auth/sveltekit": "^0.3.11",
+    "@auth/core": "^0.18.1",
+    "@auth/sveltekit": "^0.3.12",
     "nodemailer": "^6.9.5",
     "openai": "^4.4.0",
+    "sass": "^1.69.5",
     "sst": "^2.24.26",
     "svelte-forms": "^2.3.1",
     "svelte-forms-lib": "^2.0.1",
