--- a/middleware/eeg-central/grails-app/conf/application.yml
+++ b/middleware/eeg-central/grails-app/conf/application.yml
@@ -72,7 +72,8 @@ hibernate:
 environments:
   development:
     dataSource:
-      dbCreate: create-drop
+      #dbCreate: create-drop
+      dbCreate: none
       #url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
       username: eeg_central
       password: ${DB_PASSWORD}
