no login in dev

--- a/middleware/eeg-central/build.gradle
+++ b/middleware/eeg-central/build.gradle
@@ -53,7 +53,7 @@ dependencies {
     implementation 'org.liquibase:liquibase-core:3.10.3'
 
 
-
+    //defaults below
     implementation("org.grails:grails-core")
     implementation("org.grails:grails-logging")
     implementation("org.grails:grails-plugin-databinding")
