--- a/website/.gitignore
+++ b/website/.gitignore
@@ -15,3 +15,4 @@ cdk.context.json
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
+ischlstrom-website-package.zip
