reducing deps to smui

--- a/website/package.json
+++ b/website/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "start": "PORT=8080 node build",
-    "dev": "vite dev",
-    "build": "vite build",
+    "dev": "npm run prepare && vite dev",
+    "build": "npm run prepare && vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
@@ -15,21 +15,7 @@
     "build-storybook": "storybook build"
   },
   "devDependencies": {
-    "@smui-extra/accordion": "^7.0.0-beta.15",
-    "@smui-extra/bottom-app-bar": "^7.0.0-beta.15",
-    "@smui/card": "^7.0.0-beta.14",
-    "@smui/chips": "^7.0.0-beta.14",
-    "@smui/dialog": "^7.0.0-beta.15",
     "@smui/fab": "^7.0.0-beta.14",
-    "@smui/layout-grid": "^7.0.0-beta.14",
-    "@smui/menu": "^7.0.0-beta.14",
-    "@smui/menu-surface": "^7.0.0-beta.14",
-    "@smui/paper": "^7.0.0-beta.14",
-    "@smui/slider": "^7.0.0-beta.15",
-    "@smui/tab": "^7.0.0-beta.14",
-    "@smui/tab-bar": "^7.0.0-beta.14",
-    "@smui/textfield": "^7.0.0-beta.15",
-    "@smui/top-app-bar": "^7.0.0-beta.14",
     "@storybook/addon-essentials": "^7.5.1",
     "@storybook/addon-interactions": "^7.5.1",
     "@storybook/addon-links": "^7.5.1",
@@ -47,7 +33,6 @@
     "html5-qrcode": "^2.3.8",
     "postcss": "^8.4.31",
     "postcss-load-config": "^4.0.1",
-    "smui-theme": "^7.0.0-beta.14",
     "storybook": "^7.5.1",
     "svelte": "^4.2.3",
     "svelte-check": "^3.6.0",
@@ -60,10 +45,14 @@
     "@auth/core": "^0.18.1",
     "@auth/pg-adapter": "^0.2.7",
     "@auth/sveltekit": "^0.3.12",
+    "@smui/paper": "^7.0.0-beta.16",
+    "@smui/slider": "^7.0.0-beta.16",
+    "@smui/textfield": "^7.0.0-beta.16",
     "nodemailer": "^6.9.5",
     "openai": "^4.4.0",
     "pg": "^8.11.3",
     "sass": "^1.69.5",
+    "smui-theme": "^7.0.0-beta.16",
     "sst": "^2.24.26",
     "svelte-forms": "^2.3.1",
     "svelte-forms-lib": "^2.0.1",
