--- a/website/package.json
+++ b/website/package.json
@@ -36,6 +36,7 @@
     "storybook": "^7.5.1",
     "svelte": "^4.2.3",
     "svelte-check": "^3.6.0",
+    "svelte-youtube-embed": "^0.2.1",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
     "vite": "^4.5.0"
