--- a/website/package.json
+++ b/website/package.json
@@ -39,6 +39,7 @@
     "@smui/paper": "^7.0.0-beta.16",
     "@smui/slider": "^7.0.0-beta.16",
     "@smui/textfield": "^7.0.0-beta.16",
+    "mapbox-gl": "^3.3.0",
     "nodemailer": "^6.9.5",
     "pg": "^8.11.3",
     "sass": "^1.69.5",
