--- a/website/package.json
+++ b/website/package.json
@@ -15,7 +15,7 @@
     "build-storybook": "storybook build"
   },
   "devDependencies": {
-    "@smui/fab": "^7.0.0-beta.14",
+    "@smui/fab": "^7.0.0",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/adapter-node": "^1.3.1",
     "@sveltejs/kit": "^1.27.5",
@@ -36,14 +36,17 @@
     "@auth/core": "^0.34.2",
     "@auth/pg-adapter": "^1.4.2",
     "@auth/sveltekit": "^1.4.2",
-    "@smui/paper": "^7.0.0-beta.16",
-    "@smui/slider": "^7.0.0-beta.16",
-    "@smui/textfield": "^7.0.0-beta.16",
+    "@smui/paper": "^7.0.0",
+    "@smui/slider": "^7.0.0",
+    "@smui/textfield": "^7.0.0",
+    "chart.js": "^4.4.3",
+    "date-fns": "^3.6.0",
     "mapbox-gl": "^3.3.0",
     "nodemailer": "^6.9.5",
     "pg": "^8.11.3",
     "sass": "^1.69.5",
-    "smui-theme": "^7.0.0-beta.16",
+    "smui-theme": "^7.0.0",
+    "svelte-chartjs": "^3.1.5",
     "svelte-forms": "^2.3.1",
     "svelte-forms-lib": "^2.0.1",
     "svelte-jsoneditor": "^0.21.1",
