--- a/website/package.json
+++ b/website/package.json
@@ -39,6 +39,7 @@
     "@smui/paper": "^7.0.0",
     "@smui/slider": "^7.0.0",
     "@smui/textfield": "^7.0.0",
+    "@zerodevx/svelte-json-view": "^1.0.10",
     "chart.js": "^4.4.3",
     "date-fns": "^3.6.0",
     "mapbox-gl": "^3.3.0",
