--- a/website/package.json
+++ b/website/package.json
@@ -43,6 +43,7 @@
     "chart.js": "^4.4.3",
     "date-fns": "^3.6.0",
     "mapbox-gl": "^3.3.0",
+    "nextcloud-node-client": "^1.8.1",
     "nodemailer": "^6.9.5",
     "pg": "^8.11.3",
     "sass": "^1.69.5",
