--- a/website/package.json
+++ b/website/package.json
@@ -44,7 +44,6 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "mapbox-gl": "^3.3.0",
-    "nextcloud-node-client": "^1.8.1",
     "nodemailer": "^6.9.5",
     "pg": "^8.11.3",
     "sass": "^1.69.5",
@@ -55,6 +54,7 @@
     "svelte-jsoneditor": "^0.21.1",
     "svelte-loading-spinners": "^0.3.4",
     "svelte-youtube-embed": "^0.2.3",
+    "webdav": "^5.7.1",
     "yup": "^1.2.0"
   }
 }
