--- a/website/package.json
+++ b/website/package.json
@@ -43,6 +43,7 @@
     "chart.js": "^4.4.3",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
+    "downloadjs": "^1.4.7",
     "mapbox-gl": "^3.3.0",
     "nodemailer": "^6.9.5",
     "pg": "^8.11.3",
