--- a/website/package.json
+++ b/website/package.json
@@ -46,6 +46,7 @@
     "downloadjs": "^1.4.7",
     "mapbox-gl": "^3.3.0",
     "nodemailer": "^6.9.5",
+    "papaparse": "^5.4.1",
     "pg": "^8.11.3",
     "sass": "^1.69.5",
     "smui-theme": "^7.0.0",
