--- a/website-svelte5/package.json
+++ b/website-svelte5/package.json
@@ -19,5 +19,11 @@
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
 		"vite": "^6.2.6"
+	},
+	"dependencies": {
+		"@auth/pg-adapter": "^1.9.0",
+		"@auth/sveltekit": "^1.9.1",
+		"nodemailer": "^6.10.1",
+		"pg": "^8.15.6"
 	}
 }
