--- a/website-svelte5/package.json
+++ b/website-svelte5/package.json
@@ -13,17 +13,29 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^6.0.0",
+		"@sveltejs/adapter-node": "^5.2.12",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@tailwindcss/vite": "^4.0.0",
+		"flowbite": "^3.1.2",
+		"flowbite-svelte": "^0.48.6",
+		"flowbite-svelte-icons": "^2.1.1",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"tailwindcss": "^4.0.0",
 		"typescript": "^5.0.0",
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
 		"@auth/pg-adapter": "^1.9.0",
 		"@auth/sveltekit": "^1.9.1",
+		"@zerodevx/svelte-json-view": "^1.0.11",
+		"date-fns": "^4.1.0",
+		"downloadjs": "^1.4.7",
+		"mapbox-gl": "^3.11.1",
 		"nodemailer": "^6.10.1",
-		"pg": "^8.15.6"
+		"papaparse": "^5.5.2",
+		"pg": "^8.15.6",
+		"webdav": "^5.8.0"
 	}
 }
