--- a/website/package.json
+++ b/website/package.json
@@ -30,6 +30,7 @@
 	"dependencies": {
 		"@auth/pg-adapter": "^1.9.0",
 		"@auth/sveltekit": "^1.9.1",
+		"@careswitch/svelte-data-table": "^0.6.3",
 		"@zerodevx/svelte-json-view": "^1.0.11",
 		"date-fns": "^4.1.0",
 		"dotenv": "^16.5.0",
